# programming

./: .gitignore  CMakeLists.txt
LW1/c_style_io/: main.cpp
LW1/c_style_io2/: main.cpp
LW1/io_streams/: main.cpp
LW2/: switch.cpp
LW2/branching/: main.cpp
LW3/: loop.cpp  negative_values.cpp
LW4/: copy_from_array.cpp  replacing_in_array.cpp  sort.cpp
LW5/: avg.cpp  matrix_sort.cpp  replace_min.cpp
LW6/: decimal.cpp  vowel.cpp
LW7/: struct.cpp
