cmake_minimum_required(VERSION 3.17)
project(ogti)

set(CMAKE_CXX_STANDARD 14)

add_executable(LW1_1 LW1/c_style_io.cpp)
add_executable(LW1_2 LW1/c_style_io2.cpp)
add_executable(LW1_3 LW1/io_streams.cpp)
add_executable(LW2_1 LW2/branching.cpp)
add_executable(LW2_2 LW2/switch.cpp)
add_executable(LW3_1 LW3/loop.cpp)
add_executable(LW3_2 LW3/negative_values.cpp)
add_executable(LW4_1 LW4/replacing_in_array.cpp)
add_executable(LW4_2 LW4/copy_from_array.cpp)
add_executable(LW4_3 LW4/sort.cpp)
add_executable(LW5_1 LW5/replace_min.cpp)
add_executable(LW5_2 LW5/avg.cpp)
add_executable(LW5_3 LW5/matrix_sort.cpp)
add_executable(LW6_1 LW6/vowel.cpp)
